@@ -9,6 +9,7 @@ Added SNA to SCR file converter
 Added SP to SCR file converter
 Added Z80 to SCR file converter
 Added P to SCR file converter
+Added ZSF to SCR file converter
 
 Improved ZX Desktop: 
 -Added direct buttons, to access menu items
@@ -28,7 +29,7 @@ Improved TBBlue emulation:
 -Added relative sprites emulation
 -Added sprite clipping emulation
 
-Improved File Browser: added previews for screens (on .scr, .tap, .tzx, .pzx, .trd, .dsk, .sna, .sp, .z80, .p)
+Improved File Browser: added previews for screens (on .scr, .tap, .tzx, .pzx, .trd, .dsk, .sna, .sp, .z80, .p, .zsf)
 
 Fixed reading keys on SDL and X11 drivers with default keymap and machines QL, MSX and Spectravideo
 Fixed restoring machine to msx, coleco, sg1000 and svi
